--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "id": "5736a095-6d23-404b-9eeb-917d059279cb",
-  "name": "Optimal Prama UK",
+  "name": "Optimal Phrama UK",
   "publisher": "OPUK_Extension",
-  "version": "1.0.0.1",
+  "version": "1.0.0.2",
   "brief": "",
   "description": "",
   "privacyStatement": "",
