Sandip_Changes_Git

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 OPUK_Extension_Optimal Prama UK_1.0.0.1.app
 .vscode/launch.json
 .vscode/rad.json
+.vscode/launch.json
+OPUK_Extension_Optimal Phrama UK_1.0.0.2.app
