--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-OPUK_Extension_Optimal Prama UK_1.0.0.1.app
-.vscode/launch.json
-.vscode/rad.json
-.vscode/launch.json
-OPUK_Extension_Optimal Phrama UK_1.0.0.2.app
-OPUK_Extension_Optimal Phrama UK_1.0.0.2.app
+/.snapshots
+/.vscode
+/.alpackages
+*.app
