--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,6 +32,7 @@
         //     "launchBrowser": true,
         //     "enableLongRunningSqlStatements": true,
         //     "enableSqlInformationDebugger": true,
+        //     "schemaUpdateMode": "ForceSync"
         // }
     ]
 }
