BishwasK_Chnages_Reportcontrol_ItemReInserted

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,19 +20,19 @@
             "schemaUpdateMode": "ForceSync",
             "port": 7053
         },
-        // {
-        //     "name": "Microsoft cloud sandbox",
-        //     "request": "launch",
-        //     "type": "al",
-        //     "environmentType": "Sandbox",
-        //     "environmentName": "Sandbox",
-        //     "startupObjectId": 22,
-        //     "startupObjectType": "Page",
-        //     "breakOnError": "All",
-        //     "launchBrowser": true,
-        //     "enableLongRunningSqlStatements": true,
-        //     "enableSqlInformationDebugger": true,
-        //     "schemaUpdateMode": "ForceSync"
-        // }
+        {
+            "name": "Microsoft cloud sandbox",
+            "request": "launch",
+            "type": "al",
+            "environmentType": "Sandbox",
+            "environmentName": "Sandbox",
+            "startupObjectId": 22,
+            "startupObjectType": "Page",
+            "breakOnError": "All",
+            "launchBrowser": true,
+            "enableLongRunningSqlStatements": true,
+            "enableSqlInformationDebugger": true,
+            "schemaUpdateMode": "ForceSync"
+        }
     ]
 }
