--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,38 +1,38 @@
 {
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Your own server",
-            "request": "launch",
-            "type": "al",
-            "environmentType": "Sandbox",
-            "server": "http://localhost:8080/BC250/",
-            "serverInstance": "BC250",
-            "authentication": "Windows",
-            "startupObjectId": 22,
-            "startupObjectType": "Page",
-            "breakOnError": "All",
-            "launchBrowser": true,
-            "enableLongRunningSqlStatements": true,
-            "enableSqlInformationDebugger": true,
-            "tenant": "default",
-            "usePublicURLFromServer": true,
-            "schemaUpdateMode": "ForceSync",
-            "port": 7053
-        },
         // {
-        //     "name": "Microsoft cloud sandbox",
+        //     "name": "Your own server",
         //     "request": "launch",
         //     "type": "al",
         //     "environmentType": "Sandbox",
-        //     "environmentName": "Sandbox",
+        //     "server": "http://localhost:8080/BC250/",
+        //     "serverInstance": "BC250",
+        //     "authentication": "Windows",
         //     "startupObjectId": 22,
         //     "startupObjectType": "Page",
         //     "breakOnError": "All",
         //     "launchBrowser": true,
         //     "enableLongRunningSqlStatements": true,
         //     "enableSqlInformationDebugger": true,
-        //     "schemaUpdateMode": "ForceSync"
-        // }
+        //     "tenant": "default",
+        //     "usePublicURLFromServer": true,
+        //     "schemaUpdateMode": "ForceSync",
+        //     "port": 7053
+        // },
+        {
+            "name": "Microsoft cloud sandbox",
+            "request": "launch",
+            "type": "al",
+            "environmentType": "Sandbox",
+            "environmentName": "Sandbox",
+            "startupObjectId": 22,
+            "startupObjectType": "Page",
+            "breakOnError": "All",
+            "launchBrowser": true,
+            "enableLongRunningSqlStatements": true,
+            "enableSqlInformationDebugger": true,
+            "schemaUpdateMode": "ForceSync"
+        }
     ]
 }
