Update checklist page caption, enhance field editability, and modify JSON configurations

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,7 +32,7 @@
             "launchBrowser": true,
             "enableLongRunningSqlStatements": true,
             "enableSqlInformationDebugger": true,
-          //  "schemaUpdateMode": "ForceSync"
+          "schemaUpdateMode": "ForceSync"
         }
     ]
 }
