Add Item Pictures functionality and related extensions

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 .vscode/rad.json
 OPUK_Extension_Optimal Phrama UK_1.0.0.2.app
 .vscode/launch.json
+.vscode/rad.json
+src/OPPageExt/Pag-Ext50101.ItemExt.al
+src/OPPageExt/Pag-Ext50101.ItemExt.al
+OPUK_Extension_Optimal Phrama UK_1.0.0.2.app
