--- a/app.json
+++ b/app.json
@@ -21,9 +21,9 @@
     }
   ],
   "resourceExposurePolicy": {
-    "allowDebugging": true,
+    "allowDebugging": false,
     "allowDownloadingSource": false,
-    "includeSourceInSymbolFile": true
+    "includeSourceInSymbolFile": false
 
   },
   "runtime": "14.0",
