--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,7 +33,7 @@
             "launchBrowser": true,
             "enableLongRunningSqlStatements": true,
             "enableSqlInformationDebugger": true,
-         "schemaUpdateMode": "ForceSync"
+         //"schemaUpdateMode": "ForceSync"
         }
     ]
 }
