Remove obsolete application files and update app.json for versioning and target platform

--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
   "dependencies": [],
   "screenshots": [],
   "platform": "1.0.0.0",
-  "application": "25.0.0.0",
+  "application": "27.0.0.0",
   "idRanges": [
     {
       "from": 50100,
@@ -26,6 +26,7 @@
     "includeSourceInSymbolFile": false
 
   },
+  "target": "Cloud",
   "runtime": "14.0",
   "features": [
     "NoImplicitWith"
